# iac-data-science

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
data/sample/: test.csv  train.csv
scripts/: demo.py
src/: cli.py  main.py
src/api/: app.py  dependencies.py  routes.py  schemas.py
src/dashboard/: __init__.py  app.py
src/data/: features.py  loaders.py  pipeline.py  preprocessors.py  validators.py
src/models/: base.py  evaluation.py  implementations.py  reporting.py  trainer.py
src/utils/: config.py  exceptions.py  logging.py
tests/: test_api.py  test_cli.py  test_config.py  test_dashboard.py  test_data.py  test_demo.py  test_evaluation.py  test_logging.py  test_models.py  test_preprocessing.py
